# ded-tasks

./: README.md
onegin/: CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  data1.out  data2.out  data3.out
onegin/res/: data.in
onegin/src/: Buffer.cpp  Buffer.h  StringViewManager.cpp  StringViewManager.h  main.cpp
